--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -37,6 +37,7 @@ $[p_{\min}, p_{\max}]$,
 возможных значений параметра,
 этот же диапазон может иметь зависимость от времени:
 $[p_{\min}(t), p_{\max}(t)]$.
+Множество допустимых значений параметра обозначим через $\mathcal{P}$.
 На основании априорных исследований может
 быть задана как плотность вероятности для значений параметра,
 так и зависимость этой вероятности от времени. Наличие плотности вероятности
