--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -31,11 +31,16 @@
 
 \subsection{Основные параметры поиска}
 
+Процесс поисковой идентификации заключается в настройке параметров одной
+или нескольких моделей, анализу критериев идентификации
+(или соответствующих функций качества), и оцениванию по этой информации
+значения идентифицируемого параметра. При использовании в целях идентификации нескольких моделей,
+появляются общие действия, применяемые к каждой из них.
 xxx
 
 \subsection{ Использование множества моделей / агентов}
 
-Введём необходимые для дальнейшегго изложения определения.
+Введём необходимые для дальнейшего изложения определения.
 
 Определение: \textbf{поисковый агент} -- это динамическая система, получающая выходной ($x(t)$),
 и, при необходимости входной сигнал ($u(t)$) от одной или нескольких моделей,
@@ -63,6 +68,22 @@ xxx
 или/и, если пространство параметров имеет размерность больше единицы,
 вместо простого индекса $i$ могут применяется составные.
 
+\subsubsection{Один агент}
+
+Единственный неподвижный агент практически не имеет смысла
+с точки зрения синтеза системы идентификации.
+Он может сигнализировать о том, что в пределах
+\(\tau\) модель была или не была достаточно адекватна
+объекту.
+
+Наличие истории и возможность перемещаться дают возможность
+построить систему идентификации и на одном агенте.
+В качестве истории могут использоваться, в том числе,
+динамические свойства идентифицируемого объекта
+(оригинальный метод АПИ). Также могут быть
+применены интегрирующие элементы агента идентификации
+(синхронный детектор, \ldots).
+
 В простейших случаях возможно построение системы идентификации
 с одной моделью и, соответственно, одним поисковым агентом.
 Примерами такого похода могут служить
@@ -79,6 +100,17 @@ xxx
 позволяет с меньшими временными затратами оценить градиент функции качества,
 и, как следствие -- определить значение параметра. Также значительным плюсом
 такого подхода является меньшая скорость изменения параметров моделей.
+
+\subsubsection{Пара агентов}
+
+Пара агентов, взаимодействующая между собой,
+способна оценить градиент функции качества,
+и, следовательно, обеспечить смещение в требуемом направлении.
+
+С учетом глобальной информации возможна адаптация параметров пары.
+В свою очередь, информация, полученная от пары может
+использоваться для уточнения глобальных параметров.
+
 
 Тем не менее, при использовании пары моделей неоправданно много времени
 тратится на перемещение поисковой пары, особенно при резких изменениях
@@ -134,6 +166,8 @@ $F(q_o,q_i)$.
   \label{atu:f:F_types}
 \end{figure}
 
+\subsubsection{Триплет агентов}
+
 Рассмотрим случай, когда каждый агент взаимодействует с двумя своими ближайшими соседями,
 запрашивая у них величины $p$ -- текущее значение параметра и $F$.
 При анализе конкретного агента, для упрощения записи, его индекс $i$ обозначим как ``c'' (current),
@@ -143,33 +177,6 @@ $F(q_o,q_i)$.
 а координаты выбираются за пределами рабочего диапазона поиска.
 
 
-\subsubsection{Один агент}
-
-Единственный неподвижный агент практически не имеет смысла
-с точки зрения синтеза системы идентификации.
-Он может сигнализировать о том, что в пределах
-\(\tau\) модель была или не была достаточно адекватна
-объекту.
-
-Наличие истории и возможность перемещаться дают возможность
-построить систему идентификации и на одном агенте.
-В качестве истории могут использоваться, в том числе,
-динамические свойства идентифицируемого объекта
-(оригинальный метод АПИ). Также могут быть
-применены интегрирующие элементы агента идентификации
-(синхронный детектор, \ldots).
-
-\subsubsection{Пара агентов}
-
-Пара агентов, взаимодействующая между собой,
-способна оценить градиент функции качества,
-и, следовательно, обеспечить смещение в требуемом направлении.
-
-С учетом глобальной информации возможна адаптация параметров пары.
-В свою очередь, информация, полученная от пары может
-использоваться для уточнения глобальных параметров.
-
-\subsubsection{Триплет агентов}
 
 Три соседних агента, взаимодействующие между собой,
 способны не только оценить градиент функции качества в своей окрестности,
@@ -415,22 +422,322 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 \Cmt{ Заметная часть новизны планируется здесь}
 
 
+\subsection{Классификация и обозначения систем идентификации}
+
+В данной работе рассматривается набор методов идентификации нелинейных динамических
+систем. При этом, большинство из них имеют общие свойства, и система идентификации в  целом
+состоит из ``набора'' модулей и алгоритмов, комбинация которых
+позволяют выбрать конкретный метод, подходящий для данной задачи.
+Следовательно, возникает вопрос корректного и непротиворечивого обозначения
+используемого метода. Ввиду значительного количества методов, полученных
+путём комбинации их элементов, не имеет смысла давать каждому
+отдельное названия. Возникает потребность в унификации обозначений
+методов, и соответственно, введения определённой классификации.
+
+Предлагается к использованию следующая система обозначений:
+
+\begin{enumerate}
+
+  \item  Первый символ определяет, какая величина ($q$ или $F$) используется
+    каждым агентом для определения $p_e$. Соответственно, первый символ
+    будет ``q'' или ``F''.
+    Для обозначения методов, для которых в качестве критерия используется
+    непосредственно выходы моделей и объектов, использует символ ``x''.
+    При необходимости, при появлении новых подходов,
+    могут быть назначены дополнительные символы.
+
+  \item
+    Второй символ задаёт способ определения идентифицируемого параметра по всему ансамблю:
+    \begin{description}
+
+      \item[b]  -- ``best'' -- выбирается лучший агент без дальнейшей обработки;
+
+      \item[g]  -- ``global COG'' -- метод ``Center of Gravity'' по всему ансамблю~(\ref{atu:eq:p_ge});
+
+      \item[l] -- ``local COG'' --   метод ``Center of Gravity'' по окрестности лучшего агента~(\ref{atu:eq:p_le});
+
+      \item[e] -- квадратическая интерполяция по $F$ в окрестности лучшего агента~(\ref{atu:eq:p_e});
+
+      \item[x] -- ``extremum COG'' -- вариант ``Center of Gravity'' по всему ансамблю, при этом
+        от каждого агента используются величины $p_e$ и $FS_e$.
+
+    \end{description}
+
+    В случае, если вместо ансамбля используется 1--2 агента, то для определённости будет
+    использован символ ``b''
+
+  \item
+    Третий символ обозначает выбранную зависимость для величины $f_e$:
+    \begin{description}
+
+      \item[c]  -- ``const'' -- величина $f_e$ не участвует в описании
+        динамики поискового агента;
+
+      \item[l] -- ``linear'' --  величина $f_e$ линейно зависит
+        от $p_e$: $f_e = k_e ( p_e - p_c )$;
+
+      \item[s] -- ``sign'' -- используется зависимость вида
+        от $p_e$: $f_e = k_e \sign( p_e - p_c )$;
+
+      \item[u] -- ``saturate'' -- аналогично ``s'', но используется небольшой
+        линейный участок при $p_e \approx p_c$.
+
+    \end{description}
+
+
+  \item
+    Четвёртый символ указывает, каким образом величина $f_t$ влияет на динамику агента:
+    \begin{description}
+
+      \item[z]  -- ``zero'' -- агент неподвижен;
+
+      \item[v] -- ``viscous'' --  используется модель вязкого трения; % TODO: ref;
+
+      \item[b] -- ``ball'' -- используется подход ``тяжёлого шарика'';
+
+      \item[s] -- ``special'' -- особый вид, задаётся методом непосредственно.
+
+    \end{description}
+
+  \item
+    Пятый символ позволяет указать, какое дополнительное поисковое движение
+    реализует агент
+    \begin{description}
+
+      \item[n]  -- ``none'' -- дополнительное поисковое движение не используется,
+        при этом, если не возникает неоднозначности в классификации, данный символ можно упустить;
+
+      \item[t] -- ``triangle'' --  используется пилообразное поисковое движение, например, реализуемое
+        с помощью УГПК; % TODO: ref;
+
+      \item[d] -- ``dual'' -- используется поисковое движение, реализуемое парой УГПК;
+
+      \item[s] -- ``sin'' --  используется гармоническое поисковое движение;
+
+      \item[r] -- ``random'' --  используется случайное поисковое движение.
+
+    \end{description}
+
+  \item
+    Следующая группа символов указывает количество активных агентов.
+    В одномерном случае это или просто число, или символ ``N'', если
+    конкретное количество несущественно. В двумерном случае
+    используются варианты ``NxM'' для сеточного расположения агентов,
+    и ``NpM'  -- для конфигурации ``крест''. В случае большей размерности
+    пространства параметров можно использовать аналогичные обозначения,
+    но, при необходимости, с дополнительными индексами, например:
+    ``10x10p5'', ``$\mathrm{N_1 p N_2 x N_3 p N_4}$''.
+
+  \item
+    Следующий символ, записанный после символа ``.'' указывает количество агентов в
+    в поисковой группе, например: ``2'' -- поисковая пара, ``3'' -- триплет.
+
+  \item Восьмой символ, указываемый при необходимости, описывает
+    поведение дополнительных моделей, находящихся на границе:
+    \begin{description}
+
+      \item[z]  -- ``zero'' -- реальная модель не используется, функция качества $F$ для неё считается нулевой;
+
+      \item[к] -- ``real'' --  используется реальная модель, но без возможности её смещения;
+
+      \item[а] -- ``approximate'' -- значение критерия и функции качества каким-то образом аппроксимируются;
+
+    \end{description}
+
+\end{enumerate}
+
+При необходимости, в конец данного обозначения, через точку, добавляется обозначение используемого критерия.
+Дополнительное компоненты добавляются в конец после двоеточия. Для обозначения подмножеств методов
+вместо обозначения элемента используется символ ``A'' -- ``any''.
+
+
+Примеры обозначений:
+
+``Fglv5.3z.$q_{x^2}$'' -- метод, использующий 5 подвижных (3 триплета) и 2 ``fake'' модели,
+``global COG'' для результирующего значения параметра
+для оценивания величины $p_e$ используется функция качества,
+зависимость $f_e$ от $p_e$ -- линейная, ``вязкая'' динамика, критерий ``$q_{x^2}$''.
+
+
+``qAuv7.3r.$q_{dx}$'' -- методы, использующий 7 подвижных (5 триплетов) и 2 ``real'' модели на границах,
+для оценивания величины $p_e$ используется значение критерия,
+зависимость $f_e$ от $p_e$ -- с насыщением, ``вязкая'' динамика, критерий ``$q_{dx}$'',
+используются все доступные методы для определения  результирующего значения параметра.
+
+``xblst1'' -- оригинальный адаптивно-поисковый метод.
+
+``xblsd2.2'' -- адаптивно-поисковый метод с двумя моделями и двумя УГПК с общим сбросом.
+
+``Fgcz7x7.1'' -- сетка из 49 ($7 \times 7$) неподвижных моделей,
+``global COG'' для результирующего значения параметра,
+без указания конкретного критерия.
 
 \subsection{Качество идентификации}
 
-Два способа -- по критерию (или функции качества)
-или по параметру.
+Среди множества способов оценивания качества идентификации
+можно выделить две группы.
+К первой группе относятся те, которые производят оценивание
+только на основе критерия идентификации, или,
+что в какой-то мере эквивалентно, по функции качества идентификации.
+В реальных задачах, когда нет возможности определить реальные значения
+параметров объекта, это практически единственный вариант.
+При этом подразумевается, что как критерий идентификации, так и
+функция качества выбраны корректно.
 
-Представляется достаточно очевидным, что
-С учётомм того факта, что
+В процессе синтеза новых критериев и методов идентификации
+такой подход, с одной стороны, слишком строг,
+с другой -- не даёт проверить корректность полученного результата,
+так как в этом случае ни близость критериев модели и объекта,
+ни, тем более, близкое к единице значение функции качества не
+обозначает работоспособность системы идентификации.
+Следовательно, при анализе работоспособности,
+которые проводятся как на модельных задачах,
+так и на реальных физических объектах в контролируемых
+условиях, необходимо использовать методы из второй группы,
+основанные на сравнении собственно параметров модели и объекта,
+то есть на оценивании параметрической
+ошибки идентификации $e(t)=p_o(t)-p_{oe}(t)$
 
-\Cmt{Расширить из кандидатской с учётом времени и множества моделей.}
+При таких условиях, качество идентификации для процесса
+в целом задаётся мерой:
+%
+\[
+  \overline{e} = \mu( p_o(t), p_{oe}(t) ),
+  \quad
+  t \in [0;T].
+\]
 
-Процесс поисковой идентификации заключается в настройке параметров одной
-или нескольких моделей, анализу критериев идентификации
-(или соответствующих функций качества), и оцениванию по этой информации
-значения идентифицируемого параметра. При использовании в целях идентификации нескольких моделей,
-появляются общие действия, применяемые к каждой из них.
+Конкретный вид меры определяется задачей.
+Если в конкретной постановке важно знать максимальное
+отклонение идентифицируемого параметра модели от объекта,
+то имеет смысл выбрать меру $C[0;T]$~\cite{kolmogorov_fun_ana} или же
+$R_{\infty}^n$ для дискретного представления:
+%
+\begin{equation}
+  \overline{e_c}(p_o(t),p_{oe}(t))
+  =
+  \max \big| p_o(t)-p_{oe}(t) \big|,
+  \quad
+  t \in [0;T].
+  \label{atu:eq:e_c}
+\end{equation}
+
+Более распространённым является случай,
+когда интерес представляет не максимальное значение $|e(t)|$,
+а какой-то вариант усреднения этой величины, например
+%
+\begin{equation}
+  \overline{e_2}(p_o(t),p_{oe}(t))
+  =
+  \sqrt{ \frac{1}{T} \int\limits_{0}^{T} \big( p_o(t)-p_{oe}(t) \big)^2 \, \mathrm{d}t },
+  \label{atu:eq:e_2}
+\end{equation}
+%
+или
+\begin{equation}
+  \overline{e_1}(p_o(t),p_{oe}(t))
+  =
+  \frac{1}{T} \int\limits_{0}^{T} \big| p_o(t)-p_{oe}(t) \big| \, \mathrm{d}t .
+  \label{atu:eq:e_1}
+\end{equation}
+%
+Этот подход особенно оправдан в тех случаях, когда
+значение параметра объекта претерпевает резкие изменения.
+При этом, никакая система идентификации не будет успевать за такими
+изменениями, особенно с учётом времени, необходимого для
+оценивания критерия. Следовательно, если оценивать в таких условиях
+качество идентификации, используя \ref{atu:eq:e_c},
+то в качестве результата получим всего лишь величину
+скачков параметра, а не какие-либо характеристики процесса идентификации.
+
+В тех, достаточно редких случаях, когда из априорной
+информации о системе известно, что $p_o(t) = \mathrm{const}$,
+имеет смысл в выражениях~(\ref{atu:eq:e_c})--~(\ref{atu:eq:e_1})
+ограничить диапазоны для времени, например $[T-\tau_p,T]$,
+где $\tau_p$ -- время, достаточное для измерения
+критерия идентификации с требуемой точностью.
+Это позволит избежать влияния переходных процессов
+идентификации на интегральную оценку ошибки.
+В остальных случаях, представляет интерес именно реакция
+на изменения параметра, поэтому в данной работе преимущественно будет
+использоваться выражение~(\ref{atu:eq:e_2}).
+
+
+
+
+Само значение как ошибки идентификации, так и соответствующей меры -- величина размерная,
+и в таком виде не пригодно для
+независимого от конкретной ситуации оценивания качества работы метода.
+Рассмотрим возможные величины, дающие возможность обезразмерить ошибку идентификации.
+
+В первую очередь, предположим, что вообще не проводим никакой идентификации,
+а в качестве значения параметра используем или геометрический центр $p_{00}$ множества $\mathcal{P}$,
+или, если это по какой-либо причине известно, точку с максимальным значением плотности вероятности.
+Тогда обозначим
+%
+\begin{equation}
+  \overline{e}_{00}
+  =
+  \overline{e}(p_o(t),p_{00})
+  \label{atu:eq:e_00}
+\end{equation}
+
+Относительные ошибки для соответствующих абсолютных~(\ref{atu:eq:e_xx})
+тогда будут определены следующим образом:
+%
+\begin{equation}
+  \overline{e}_{rge} = \frac{\overline{e}_{ge}}{\overline{e}_{00}}, \;
+  \overline{e}_{rle} = \frac{\overline{e}_{le}}{\overline{e}_{00}}, \;
+  \overline{e}_{xee} = \frac{\overline{e}_{xe}}{\overline{e}_{00}}, \;
+  \overline{e}_{ree} = \frac{\overline{e}_{ee}}{\overline{e}_{00}}.
+  \label{atu:eq:e_rxx}
+\end{equation}
+
+Близость этих величин к единице свидетельствует о том, что
+данный метод идентификации в рассматриваемых условиях бесполезен.
+Более того, при серьёзных нарушениях в процессе поиска,
+например при потере устойчивости, эти величины могут и превосходить единицу.
+
+Несмотря на очевидную пользу, такой способ приведения к безразмерному виду ошибок
+имеет ряд недостатков. Во-первых,
+не учитывается возможная мультиагентная структура системы идентификации,
+для которой оценка ~(\ref{atu:eq:e_00}) будет слишком грубой.
+С другой стороны,
+не учитываются свойства
+самой системы. Например, возможна такая ситуация, когда параметр
+объекта изменяется настолько быстро (по отношению к времени оценивания критерия),
+что любой метод идентификации будет бесполезен.
+
+Для оценивания качества работы системы идентификации с счётом
+множества моделей, можно воспользоваться несколькими приёмами.
+Первый -- пусть все агенты неподвижны, а в качестве $p_{oe}(t)$
+используется $p_c$ той модели, функция качества для которой
+максимальна. Обозначим полученное таким образом значение
+параметра как $p_{bm}(t)$ (``best model''),
+соответствующую ему усреднённую ошибку как $\overline{e}_{bm}$.
+При этом безразмерные величины обозначим как
+$\overline{e}_{bmge}$, $\overline{e}_{bmle}$,  \ldots.
+Близость этих величин к единице, при одновременной малости
+$\overline{e}_{r*}$, свидетельствует о том, что передвижения
+агентов практически бесполезны, и работоспособность системы идентификации достигается
+практически только за счёт переключения между агентами.
+Одной из причин такого поведения, при условии отсутствия ошибок
+в настройке системы, может быть высокая чувствительность
+объекта к \textit{динамике} изменения параметра, например
+при параметрическом резонансе.
+
+Аналогичный способ, но с учётом возможностей агентов
+к аппроксимации -- $p_{oe}(t)$ определятся
+как $p_e(t)$ для лучшего агента.
+Соответствующую величину для обезразмеривания обозначим как
+$\overline{e}_{ba}$ (``best approximation'').
+Отношение $\overline{e}_{bm} / \overline{e}_{ba}$
+характеризует аппроксимирующую способность агентов.
+
+
+
+
+
 
 
 
