Many new figured for Lorenz and p3.

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -59,14 +59,39 @@ xxx
 \begin{center}
 \input{p/agent1.pgf}
 \end{center}
-\caption{Поисковый агент, настраивающий параметр одной модели}
+\caption{Поисковый агент, использующий функцию качества $F$, и настраивающий параметр одной модели}
 \label{atu:f:agent1}
+\end{figure}
+
+
+\begin{figure}[htb!]
+\begin{center}
+\input{p/agent1.pgf}
+\end{center}
+\caption{Поисковый агент, использующий критерий $q$, и настраивающий параметр одной модели}
+\label{atu:f:agent1q}
 \end{figure}
 
 
 В случае, когда один агент настраивает несколько моделей,
 или/и, если пространство параметров имеет размерность больше единицы,
 вместо простого индекса $i$ могут применяется составные.
+
+\begin{figure}[htb!]
+\begin{center}
+\input{p/agent2.pgf}
+\end{center}
+\caption{Поисковый агент, настраивающий параметры двух моделей}
+\label{atu:f:agent2}
+\end{figure}
+
+\begin{figure}[htb!]
+\begin{center}
+\input{p/agents.pgf}
+\end{center}
+\caption{Мультиагентная система идентификации}
+\label{atu:f:agents}
+\end{figure}
 
 \subsubsection{Один агент}
 
@@ -423,6 +448,7 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 
 
 \subsection{Классификация и обозначения систем идентификации}
+\label{atu:id_classification}
 
 В данной работе рассматривается набор методов идентификации нелинейных динамических
 систем. При этом, большинство из них имеют общие свойства, и система идентификации в  целом
@@ -596,13 +622,13 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 условиях, необходимо использовать методы из второй группы,
 основанные на сравнении собственно параметров модели и объекта,
 то есть на оценивании параметрической
-ошибки идентификации $e(t)=p_o(t)-p_{oe}(t)$
+ошибки идентификации $e(t)=p_o(t)-p_{id}(t)$
 
 При таких условиях, качество идентификации для процесса
 в целом задаётся мерой:
 %
 \[
-  \overline{e} = \mu( p_o(t), p_{oe}(t) ),
+  \overline{e} = \mu( p_o(t), p_{id}(t) ),
   \quad
   t \in [0;T].
 \]
@@ -614,9 +640,9 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 $R_{\infty}^n$ для дискретного представления:
 %
 \begin{equation}
-  \overline{e_c}(p_o(t),p_{oe}(t))
+  \overline{e_c}(p_o(t),p_{id}(t))
   =
-  \max \big| p_o(t)-p_{oe}(t) \big|,
+  \max \big| p_o(t)-p_{id}(t) \big|,
   \quad
   t \in [0;T].
   \label{atu:eq:e_c}
@@ -627,17 +653,17 @@ $R_{\infty}^n$ для дискретного представления:
 а какой-то вариант усреднения этой величины, например
 %
 \begin{equation}
-  \overline{e_2}(p_o(t),p_{oe}(t))
+  \overline{e_2}(p_o(t),p_{id}(t))
   =
-  \sqrt{ \frac{1}{T} \int\limits_{0}^{T} \big( p_o(t)-p_{oe}(t) \big)^2 \, \mathrm{d}t },
+  \sqrt{ \frac{1}{T} \int\limits_{0}^{T} \big( p_o(t)-p_{id}(t) \big)^2 \, \mathrm{d}t },
   \label{atu:eq:e_2}
 \end{equation}
 %
 или
 \begin{equation}
-  \overline{e_1}(p_o(t),p_{oe}(t))
+  \overline{e_1}(p_o(t),p_{id}(t))
   =
-  \frac{1}{T} \int\limits_{0}^{T} \big| p_o(t)-p_{oe}(t) \big| \, \mathrm{d}t .
+  \frac{1}{T} \int\limits_{0}^{T} \big| p_o(t)-p_{id}(t) \big| \, \mathrm{d}t .
   \label{atu:eq:e_1}
 \end{equation}
 %
@@ -710,7 +736,7 @@ $R_{\infty}^n$ для дискретного представления:
 
 Для оценивания качества работы системы идентификации с счётом
 множества моделей, можно воспользоваться несколькими приёмами.
-Первый -- пусть все агенты неподвижны, а в качестве $p_{oe}(t)$
+Первый -- пусть все агенты неподвижны, а в качестве $p_{id}(t)$
 используется $p_c$ той модели, функция качества для которой
 максимальна. Обозначим полученное таким образом значение
 параметра как $p_{bm}(t)$ (``best model''),
@@ -727,13 +753,43 @@ $\overline{e}_{r*}$, свидетельствует о том, что перед
 при параметрическом резонансе.
 
 Аналогичный способ, но с учётом возможностей агентов
-к аппроксимации -- $p_{oe}(t)$ определятся
+к аппроксимации -- $p_{id}(t)$ определятся
 как $p_e(t)$ для лучшего агента.
 Соответствующую величину для обезразмеривания обозначим как
 $\overline{e}_{ba}$ (``best approximation'').
 Отношение $\overline{e}_{bm} / \overline{e}_{ba}$
 характеризует аппроксимирующую способность агентов.
 
+
+% TODO:
+Преодолеть второй недостаток представляется не настолько тривиальной задачей.
+
+
+Для оценивания возможностей системы идентификации
+отслеживать как гладкие, так и скачкообразное изменения параметров,
+предлагается для каждой тестовой системы, если это возможно,
+проводить идентификации при условии, что
+изменение значения параметра объекта описывается одним из
+следующих выражений:
+%
+\begin{equation}
+  p_o(t) = p_0 +  U_{p} \sign \sin( \omega_{p} t ),
+  \label{atu:eq:po_t_sign}
+\end{equation}
+%
+%
+\begin{equation}
+  p_o(t) = p_0 +  U_{p} \sin( \omega_{p} t ).
+  \label{atu:eq:po_t_sin}
+\end{equation}
+
+
+При этом, использование зависимости вида~(\ref{atu:eq:po_t_sign})
+позволяет определить как реакцию системы на скачкообразные
+изменения параметра, так и проверить устойчивость процесса поиска.
+Использование зависимости~(\ref{atu:eq:po_t_sin}) позволяет проверить
+качество ``сопровождения'' системой идентификации плавно изменяющегося параметра,
+и, как правило, в этом случае ошибка идентификации должна быть меньше.
 
 
 
